# lppy

./: .gitignore  pyproject.toml  testme.py
lppy/: globals.py
lppy/daemon/: app.py
lppy/driver/: action_resolvers.py  configuration.py  connection.py  consts.py  devices.py  page.py  plugin.py  tasks.py
lppy/plugins/obs/: converter.py  keys.py  knobs.py  models.py  plugin.py
lppy/plugins/pages/: keys.py  plugin.py
lppy/plugins/playerctl/: keys.py  plugin.py
lppy/plugins/pulseaudio/: knobs.py  plugin.py
lppy/plugins/runscript/: keys.py  plugin.py
lppy/plugins/spotify/: keys.py  plugin.py
